Fix popover align

--- a/css/bootstrap.rtl.css
+++ b/css/bootstrap.rtl.css
@@ -4,8 +4,9 @@
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ * RTLed by @Abdullahdiaa
  */
 
 article,
@@ -4170,7 +4171,7 @@ input[type="submit"].btn.btn-mini {
 .modal {
   position: fixed;
   top: 50%;
-  right: 50%;
+  left: 50%;
   z-index: 1050;
   width: 560px;
   margin: -250px -280px 0 0;
@@ -4345,7 +4346,7 @@ input[type="submit"].btn.btn-mini {
 .popover {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   z-index: 1010;
   display: none;
   padding: 5px;
@@ -4355,7 +4356,7 @@ input[type="submit"].btn.btn-mini {
   margin-top: -5px;
 }
 
-.popover.right {
+.popover.left {
   margin-right: 5px;
 }
 
@@ -4363,7 +4364,7 @@ input[type="submit"].btn.btn-mini {
   margin-top: 5px;
 }
 
-.popover.left {
+.popover.right {
   margin-right: -5px;
 }
 
@@ -4376,7 +4377,7 @@ input[type="submit"].btn.btn-mini {
   border-right: 5px solid transparent;
 }
 
-.popover.right .arrow {
+.popover.left .arrow {
   top: 50%;
   right: 0;
   margin-top: -5px;
@@ -4394,7 +4395,7 @@ input[type="submit"].btn.btn-mini {
   border-right: 5px solid transparent;
 }
 
-.popover.left .arrow {
+.popover.right .arrow {
   top: 50%;
   left: 0;
   margin-top: -5px;
@@ -4428,17 +4429,17 @@ input[type="submit"].btn.btn-mini {
   line-height: 1;
   background-color: #f5f5f5;
   border-bottom: 1px solid #eee;
-  -webkit-border-radius: 3px 0 0 3px;
-     -moz-border-radius: 3px 0 0 3px;
-          border-radius: 3px 0 0 3px;
+  -webkit-border-radius: 3px 3px 0 0;
+     -moz-border-radius: 3px 3px 0 0;
+          border-radius: 3px 3px 0 0;
 }
 
 .popover-content {
   padding: 14px;
   background-color: #ffffff;
-  -webkit-border-radius: 0 3px 3px 0;
-     -moz-border-radius: 0 3px 3px 0;
-          border-radius: 0 3px 3px 0;
+  -webkit-border-radius: 0 0 3px 3px;
+     -moz-border-radius: 0 0 3px 3px;
+          border-radius: 0 0 3px 3px;
   -webkit-background-clip: padding-box;
      -moz-background-clip: padding-box;
           background-clip: padding-box;
